// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountryList.render() renders correctly when empty 1`] = `
<ul
  className="general"
/>
`;

exports[`CountryList.render() renders correctly when not empty 1`] = `
<ul
  className="general"
>
  <li />
  <li />
</ul>
`;
